opam-version: "2.0"
homepage: "https://github.com/roburio/webauthn"
dev-repo: "git+https://github.com/roburio/webauthn.git"
bug-reports: "https://github.com/roburio/webauthn/issues"
doc: "https://roburio.github.io/webauthn/doc"
maintainer: [ "team@robur.coop" ]
authors: [ "Reynir Björnsson <reynir@reynir.dk>" "Hannes Mehnert <hannes@mehnert.org>" ]
license: "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "dream" {dev}
  "ppx_blob" {dev}
  "cmdliner" {dev}
  "logs" {dev}
  "lwt" {dev}
  "yojson"
  "ppx_deriving_yojson"
  "mirage-crypto-ec"
  "mirage-crypto-rng"
  "ocplib-endian"
  "x509" {>= "0.13.0"}
  "base64" {>= "3.1.0"}
  "cstruct" {>= "6.0.0"}
]

synopsis: "WebAuthn - authenticating users to services using public key cryptography"
description: """
WebAuthn is a web standard published by the W3C. Its goal is to
standardize an interfacefor authenticating users to web-based
applications and services using public key cryptography. Modern web
browsers support WebAuthn functionality.

WebAuthn provides two funcitons: register and authenticate. Usually the
public and private keypair is stored on an external token (Yuikey etc.)
or part of the platform (TPM). After the public key is registered, it can
be used to authenticate to the same service.

This module does not preserve a database of registered public keys, their
credential ID, usernames and pending challenges - instead this data must
be stored by a client of this API in a database or other persistent
storage.

[Demo server](https://webauthn-demo.robur.coop)
[WebAuthn specification at W3C](https://w3c.github.io/webauthn/)
"""
